# datastore-mcp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  ecosystem.config.js  pyproject.toml
.github/workflows/: ci.yml
docs/: forge.md
src/datastore_mcp/: __init__.py  config.py  registry.py  server.py
src/datastore_mcp/backends/: __init__.py  base.py  clickhouse.py  influxdb.py  mongodb.py  mysql.py  opensearch.py  postgresql.py  sqlite.py  valkey.py
src/datastore_mcp/tools/: __init__.py  core.py  extras.py
tests/: conftest.py  sandbox.toml
tests/integration/: conftest.py  test_clickhouse.py  test_influxdb.py  test_mongodb.py  test_mysql.py  test_opensearch.py  test_postgresql.py  test_valkey.py
tests/unit/: test_backend_coverage.py  test_config.py  test_security_guards.py  test_write_safety.py
